--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
@@ -14,5 +13,8 @@
   "bugs": {
     "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
   },
-  "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme"
+  "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
+  "devDependencies": {
+    "azure-functions-core-tools": "2.4.290"
+  }
 }
