--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
     "scripts": {
+        "build": "webpack --config ./webpack.config.js --config-name sample-config --colors --progress",
+        "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist",
         "format": "./node_modules/.bin/prettier --config prettier.config.js --write **/*",
         "format-check": "./node_modules/.bin/prettier --config prettier.config.js --check **/*",
         "lint": "tslint -c ./tslint.json -p ./tsconfig.json --force",
         "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors",
-        "test-in-ci": "jest --ci --coverage --colors"
+        "test-in-ci": "jest --ci --coverage --colors",
+        "watch:build": "npm run build -- --watch",
+        "watch:test": "jest --watch --coverage false --colors",
+        "watch": "npm-run-all --parallel watch:build watch:test"
     },
     "repository": {
         "type": "git",
@@ -26,14 +31,21 @@
         "@azure/functions": "^1.0.1-beta2",
         "@types/jest": "^23.3.13",
         "azure-functions-core-tools": "2.4.290",
-        "jest": "^24.0.0",
+        "copy-webpack-plugin": "^4.6.0",
+        "fork-ts-checker-webpack-plugin": "^0.5.2",
+        "jest": "^23.6.0",
         "jest-circus": "^24.0.0",
         "jest-junit": "^6.1.0",
+        "npm-run-all": "^4.1.5",
         "prettier": "1.16.1",
         "rimraf": "^2.6.3",
         "ts-jest": "^23.10.5",
+        "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
-        "typescript": "^3.2.4"
+        "typescript": "^3.2.4",
+        "uglifyjs-webpack-plugin": "^2.1.1",
+        "webpack": "^4.29.0",
+        "webpack-cli": "^3.2.1"
     }
 }
