--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@ steps:
     - task: Npm@1
       inputs:
           command: custom
-          customCommand: run tslint
+          customCommand: run lint
       displayName: run linter
 
     - task: Npm@1
