--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
     "scripts": {
+        "copy-local-settings": "node_modules/.bin/copyfiles src/**/local.settings.json dist/ -u 1",
         "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist",
@@ -15,8 +16,7 @@
         "test-in-ci": "jest --ci --coverage --colors",
         "watch:build": "npm run build -- --watch",
         "watch:test": "jest --watch --coverage false --colors",
-        "watch": "npm-run-all --parallel watch:build watch:test",
-        "testing": "cd"
+        "watch": "npm-run-all --parallel watch:build watch:test"
     },
     "repository": {
         "type": "git",
@@ -33,6 +33,7 @@
         "@types/jest": "^23.3.13",
         "azure-functions-core-tools": "2.4.290",
         "copy-webpack-plugin": "^4.6.0",
+        "copyfiles": "^2.1.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
         "jest": "^23.6.0",
         "jest-circus": "^23.5.0",
