--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --config-name sample-config --colors --progress",
+        "copy-local-settings": "node_modules/.bin/copyfiles \"src/**/local.settings.json\" dist/ -u 1",
+        "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist",
-        "format": "./node_modules/.bin/prettier --config prettier.config.js --write **/*",
-        "format-check": "./node_modules/.bin/prettier --config prettier.config.js --check **/*",
+        "format": "./node_modules/.bin/prettier --config prettier.config.js --write \"**/*\"",
+        "format-check": "./node_modules/.bin/prettier --config prettier.config.js --check \"**/*\"",
         "lint": "tslint -c ./tslint.json -p ./tsconfig.json --force",
         "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors",
@@ -32,6 +33,7 @@
         "@types/jest": "^23.3.13",
         "azure-functions-core-tools": "2.4.290",
         "copy-webpack-plugin": "^4.6.0",
+        "copyfiles": "^2.1.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
         "jest": "^23.6.0",
         "jest-circus": "^23.5.0",
@@ -44,7 +46,6 @@
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
         "typescript": "^3.2.4",
-        "uglifyjs-webpack-plugin": "^2.1.1",
         "webpack": "^4.29.0",
         "webpack-cli": "^3.2.1"
     }
