--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "test-in-ci": "jest --ci --coverage --colors",
         "watch:build": "npm run build -- --watch",
         "watch:test": "jest --watch --coverage false --colors",
-        "watch": "npm-run-all --parallel watch:build watch:test"
+        "watch:lint": "node_modules/.bin/watch \"npm run lint\" ./src",
+        "watch": "npm-run-all --parallel watch:build watch:test watch:lint"
     },
     "repository": {
         "type": "git",
@@ -39,14 +40,20 @@
         "jest-circus": "^23.5.0",
         "jest-junit": "^6.1.0",
         "npm-run-all": "^4.1.5",
+        "npm-watch": "^0.6.0",
         "prettier": "1.16.1",
         "rimraf": "^2.6.3",
         "ts-jest": "^23.10.5",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
+        "typemoq": "^2.1.0",
         "typescript": "^3.2.4",
         "webpack": "^4.29.0",
         "webpack-cli": "^3.2.1"
+    },
+    "dependencies": {
+        "@types/puppeteer": "^1.11.2",
+        "puppeteer": "^1.11.0"
     }
 }
