adding support to launch chrome & navigating to the url from queue

--- a/src/scanner/.vscode/settings.json
+++ b/src/scanner/.vscode/settings.json
@@ -3,5 +3,6 @@
     "azureFunctions.projectLanguage": "JavaScript",
     "azureFunctions.templateFilter": "Verified",
     "azureFunctions.deploySubpath": ".",
-    "azureFunctions.preDeployTask": "installExtensions"
+    "azureFunctions.preDeployTask": "installExtensions",
+    "tslint.configFile": "../../tslint.json"
 }
