moving dist folder inside scanner to make it easier to deploy from vscode

--- a/src/scanner/.vscode/tasks.json
+++ b/src/scanner/.vscode/tasks.json
@@ -11,18 +11,27 @@
                 "env": {
                     "languageWorkers__node__arguments": "--inspect=9858"
                 },
-                "cwd": "${fileDirname}../../../../dist/scanner"
+                "cwd": "dist"
             },
-            "dependsOn": "installExtensions"
+            "dependsOn": "installExtensionsOnDev"
         },
         {
-            "label": "installExtensions",
+            "label": "installExtensionsOnDev",
             "command": "func extensions install",
             "type": "shell",
             "options": {
-                "cwd": "${fileDirname}../../../../dist/scanner"
+                "cwd": "dist"
             },
             "dependsOn": ["build", "copy-local-settings"]
+        },
+        {
+            "label": "installExtensionsOnProd",
+            "command": "func extensions install",
+            "type": "shell",
+            "options": {
+                "cwd": "dist"
+            },
+            "dependsOn": ["cbuild"]
         },
         {
             "label": "copy-local-settings",
@@ -32,6 +41,11 @@
         {
             "label": "build",
             "command": "npm run build",
+            "type": "shell"
+        },
+        {
+            "label": "cbuild",
+            "command": "npm run cbuild",
             "type": "shell"
         }
     ]
