Launching chrome with url inside azure function (#6)
* fix tslint issues

* adding watch for lint

* adding support to launch chrome & navigating to the url from queue

* remove sample test files

* updating package.lock.json

* moving dist folder inside scanner to make it easier to deploy from vscode

* bundling puppeteer to fix missing dependencies issues

* adding task to download chrome for deployment

--- a/src/scanner/.vscode/settings.json
+++ b/src/scanner/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
+    "azureFunctions.deploySubpath": "./dist",
     "azureFunctions.projectRuntime": "~2",
     "azureFunctions.projectLanguage": "JavaScript",
     "azureFunctions.templateFilter": "Verified",
-    "azureFunctions.deploySubpath": ".",
-    "azureFunctions.preDeployTask": "installExtensions"
+    "azureFunctions.preDeployTask": "installExtensionsOnProd",
+    "tslint.configFile": "../../tslint.json"
 }
