--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
     "scripts": {
-        "copy-local-settings": "node_modules/.bin/copyfiles \"src/**/local.settings.json\" dist/ -u 1",
+        "copy-chrome-prod": "node src/scanner/scan-url/download-chrome.js",
+        "copy-chrome-dev": "npx copyfiles \"node_modules/puppeteer/.local-chromium/**\" src/scanner/dist/scan-url/ -u 2",
+        "copy-local-settings": "npx copyfiles \"src/scanner/**/local.settings.json\" src/scanner/dist/ -u 2",
         "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
-        "clean": "rimraf dist",
-        "format": "./node_modules/.bin/prettier --config prettier.config.js --write \"**/*\"",
-        "format-check": "./node_modules/.bin/prettier --config prettier.config.js --check \"**/*\"",
+        "clean": "rimraf dist src/scanner/dist",
+        "format": "npx prettier --config prettier.config.js --write \"**/*\"",
+        "format-check": "npx prettier --config prettier.config.js --check \"**/*\"",
         "lint": "tslint -c ./tslint.json -p ./tsconfig.json --force",
         "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors",
         "test-in-ci": "jest --ci --coverage --colors",
         "watch:build": "npm run build -- --watch",
         "watch:test": "jest --watch --coverage false --colors",
-        "watch": "npm-run-all --parallel watch:build watch:test"
+        "watch:lint": "npx watch \"npm run lint\" ./src",
+        "watch": "npm-run-all --parallel watch:build watch:test watch:lint"
     },
     "repository": {
         "type": "git",
@@ -39,14 +42,21 @@
         "jest-circus": "^23.5.0",
         "jest-junit": "^6.1.0",
         "npm-run-all": "^4.1.5",
+        "npm-watch": "^0.6.0",
         "prettier": "1.16.1",
         "rimraf": "^2.6.3",
         "ts-jest": "^23.10.5",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
+        "typemoq": "^2.1.0",
         "typescript": "^3.2.4",
         "webpack": "^4.29.0",
         "webpack-cli": "^3.2.1"
+    },
+    "dependencies": {
+        "@types/puppeteer": "^1.11.2",
+        "puppeteer": "^1.11.0",
+        "puppeteer-core": "^1.11.0"
     }
 }
