--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "experimentalDecorators": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
-        "noUnusedLocals": true
+        "noUnusedLocals": true,
+        "resolveJsonModule": true
     },
     "include": ["src/**/*.ts"],
     "awesomeTypescriptLoaderOptions": {
