copy-dev & copy-prod tasks to copy all dependencies for both proefile

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
     "scripts": {
-        "copy-chrome-prod": "node src/scanner/scan-url/download-chrome.js",
-        "copy-chrome-dev": "npx copyfiles \"node_modules/puppeteer/.local-chromium/**\" src/scanner/dist/scan-url/ -u 2",
-        "copy-local-settings": "npx copyfiles \"src/scanner/**/local.settings.json\" src/scanner/dist/ -u 2",
         "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist src/scanner/dist",
+        "copy-dev": "npm-run-all --serial copy-local-settings copy-chrome-dev",
+        "copy-prod": "node src/scanner/scan-url/download-chrome.js",
+        "copy-chrome-dev": "npx copyfiles \"node_modules/puppeteer/.local-chromium/**\" src/scanner/dist/scan-url/ -u 2",
+        "copy-local-settings": "npx copyfiles \"src/scanner/**/local.settings.json\" src/scanner/dist/ -u 2",
         "format": "npx prettier --config prettier.config.js --write \"**/*\"",
         "format-check": "npx prettier --config prettier.config.js --check \"**/*\"",
         "lint": "tslint -c ./tslint.json -p ./tsconfig.json --force",
