--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     },
     "dependencies": {
         "@types/puppeteer": "^1.11.2",
+        "axe-puppeteer": "^1.0.0",
         "puppeteer": "^1.11.0",
         "puppeteer-core": "^1.11.0"
     }
