--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     },
     "dependencies": {
         "axe-puppeteer": "^1.0.0",
-        "puppeteer": "^1.12.1"
+        "puppeteer": "^1.12.1",
+        "simplecrawler": "^1.1.6"
     }
 }
