--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "allowJs": true,
         "target": "es2015",
         "module": "commonjs",
         "moduleResolution": "node",
@@ -10,7 +9,7 @@
         "noImplicitReturns": true,
         "noUnusedLocals": true
     },
-    "include": ["src/**/*.ts", "src/**/sha256.js"],
+    "include": ["src/**/*.ts"],
     "awesomeTypescriptLoaderOptions": {
         "usePrecompiledFiles": true,
         "useWebpackText": true
