--- a/src/scanner/.vscode/launch.json
+++ b/src/scanner/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Attach to JavaScript Functions",
             "type": "node",
             "request": "launch",
-            "preLaunchTask": "runFunctionsHost"
+            "preLaunchTask": "run-dev-container"
         }
     ]
 }
