adding script for building image & running container

--- a/build.yaml
+++ b/build.yaml
@@ -35,7 +35,7 @@ steps:
     - task: Npm@1
       inputs:
           command: custom
-          customCommand: run test-in-ci
+          customCommand: run test -- --ci
       displayName: run unit tests
 
     - task: PublishTestResults@2
