--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
     "scripts": {
-        "build-image": "docker build -t scanner-dep src/scanner",
-        "run-image": "docker run -p 8080:80 -it scanner-dep",
+        "build-image": "node src/scanner/dev-scripts/build-function-image.js",
+        "run-func": "node src/scanner/dev-scripts/run-function.js",
         "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist src/scanner/dist",
@@ -14,7 +14,6 @@
         "lint": "tslint -c ./tslint.json -p ./tsconfig.json --force",
         "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors",
-        "test-in-ci": "jest --ci --coverage --colors",
         "watch:build": "npm run build -- --watch",
         "watch:test": "jest --watch --coverage false --colors",
         "watch:lint": "npx watch \"npm run lint\" ./src",
@@ -34,6 +33,7 @@
         "@azure/functions": "^1.0.1-beta2",
         "@types/jest": "^23.3.13",
         "@types/puppeteer": "^1.12.0",
+        "@types/shelljs": "^0.8.2",
         "azure-functions-core-tools": "2.4.290",
         "copy-webpack-plugin": "^4.6.0",
         "copyfiles": "^2.1.0",
@@ -45,6 +45,7 @@
         "npm-watch": "^0.6.0",
         "prettier": "1.16.1",
         "rimraf": "^2.6.3",
+        "shelljs": "^0.8.3",
         "ts-jest": "^23.10.5",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
