--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     },
     "dependencies": {
         "@types/sha.js": "^2.4.0",
+        "applicationinsights": "^1.1.0",
         "axe-puppeteer": "^1.0.0",
         "puppeteer": "^1.12.1",
         "sha.js": "^2.4.11",
