initial step to support multiple packages in repo moving scanner related dependencies (package.json, etc) into scanner folder

--- a/src/scanner/package.json
+++ b/src/scanner/package.json
@@ -4,12 +4,12 @@
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
     "scripts": {
-        "build-image": "node src/scanner/dev-scripts/build-function-image.js",
-        "run-func": "node src/scanner/dev-scripts/run-function.js",
-        "deploy-prod": "node src/scanner/dev-scripts/deploy-function-to-prod.js",
+        "build-image": "node dev-scripts/build-function-image.js",
+        "run-func": "node dev-scripts/run-function.js",
+        "deploy-prod": "node /deploy-function-to-prod.js",
         "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
-        "clean": "rimraf dist src/scanner/dist",
+        "clean": "rimraf dist",
         "format": "npx prettier --config prettier.config.js --write \"**/*\"",
         "format-check": "npx prettier --config prettier.config.js --check \"**/*\"",
         "lint": "tslint -c ./tslint.json -p ./tsconfig.json",
