--- a/src/scanner/tsconfig.json
+++ b/src/scanner/tsconfig.json
@@ -10,7 +10,7 @@
         "noUnusedLocals": true,
         "resolveJsonModule": true
     },
-    "include": ["src/**/*.ts"],
+    "include": ["**/*.ts"],
     "awesomeTypescriptLoaderOptions": {
         "usePrecompiledFiles": true,
         "useWebpackText": true
